# pine-engine

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
assets/models/: cube.blend  cube.mtl  glowing_orb.blend  glowing_orb.mtl  platform.blend  platform.mtl  ship.blend  ship.mtl
assets/models/cube/: cube.blend  cube.mtl
assets/models/glowing_orb/: glowing_orb.blend  glowing_orb.mtl
assets/models/ship/: ship.blend  ship.mtl
assets/shaders/: blit_f.glsl  blit_v.glsl  ps1_default_f.glsl  ps1_default_v.glsl  ps1_f.glsl  ps1_unlit_f.glsl  ps1_unlit_v.glsl  ps1_v.glsl
src/: Helpers.h  Node.cpp  Node.h  Scene.cpp  Scene.h  main.cpp  stb_image.cpp
src/components/: DirectionalLight.cpp  DirectionalLight.h  MeshComponent.cpp  MeshComponent.h  PointLight.cpp  PointLight.h
src/graphics/: AssetManager.cpp  AssetManager.h  Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.cpp  Shader.h
src/nodes/: GameManager.cpp  GameManager.h  Node.cpp  Node.h  Orbiter.h  PointLight.cpp  PointLight.h  SpinningCube.h
